Updated Experience Section

--- a/style.css
+++ b/style.css
@@ -366,7 +366,7 @@ a.hoverline {
 }
 
 a.hoverline:hover {
-    border-bottom: 3px solid #c912c9 !important;
+    border-bottom: 3px solid #e62e2e !important;
 }
 
 #skills .card.large {
